force-app/main/default/objects/Registration_Staging__c/Registration_Staging__c.object-meta.xml
<CustomObject>
    <label>Registration Staging</label>
    <nameField>
        <label>Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>