force-app/main/default/objects/Registration_Staging__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration Stagings</relationshipLabel>
    <relationshipName>Registration_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>