force-app/main/default/objects/Registration_Staging__c/fields/Booked_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Booked_Tickets__c</fullName>
    <label>Booked Tickets</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>