force-app/main/default/objects/Registration_Staging__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Registration Stagings</relationshipLabel>
    <relationshipName>Registration_Stagings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>