force-app/main/default/objects/Registration_Staging__c/fields/Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member__c</fullName>
    <formula>&quot;https://dfj.lightning.force.com/lightning/r/&quot;&amp;Campaign_Member_ID__c&amp;&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member</label>
    <type>Text</type>
</CustomField>