force-app/main/default/objects/Registration_Staging__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Campaign__r.Id, Campaign__r.Name, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>