force-app/main/default/objects/Registration_Staging__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Venue Change</fullName>
            </value>
            <value>
                <fullName>Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Health Issues</fullName>
            </value>
            <value>
                <fullName>Travel Issues</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>