force-app/main/default/objects/Registration_Staging__c/fields/Cancelled_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Tickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled Tickets</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>