force-app/main/default/objects/Registration_Staging__c/fields/Is_Duplicate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Registration</label>
    <type>Checkbox</type>
</CustomField>