force-app/main/default/objects/Registration_Staging__c/fields/Is_Event_in_the_Future__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_in_the_Future__c</fullName>
    <formula>Event_Start__c &gt;= NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is TRUE if Event Start is greater than current date/time</inlineHelpText>
    <label>Is Event in the Future</label>
    <type>Checkbox</type>
</CustomField>