force-app/main/default/objects/Registration_Staging__c/fields/Is_Original_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Original_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Original Registration</label>
    <type>Checkbox</type>
</CustomField>