force-app/main/default/objects/Registration_Staging__c/fields/Is_Rebooking__c.field-meta.xml
<CustomField>
    <fullName>Is_Rebooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rebooking</label>
    <type>Checkbox</type>
</CustomField>