force-app/main/default/objects/Registration_Staging__c/fields/Is_Sync_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync in Progress</label>
    <type>Checkbox</type>
</CustomField>