force-app/main/default/objects/Registration_Staging__c/fields/Is_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Walk_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Walk-In</label>
    <type>Checkbox</type>
</CustomField>