force-app/main/default/objects/Registration_Staging__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Registration Stagings</relationshipLabel>
    <relationshipName>Registration_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>