force-app/main/default/objects/Registration_Staging__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Lead__r.Id, Lead__r.FirstName &amp; &apos; &apos; &amp; Lead__r.LastName, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>