force-app/main/default/objects/Registration_Staging__c/fields/Lead_Staging__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staging</label>
    <referenceTo>Lead_Staging_Record__c</referenceTo>
    <relationshipLabel>Registration Stagings</relationshipLabel>
    <relationshipName>Registration_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>