force-app/main/default/objects/Registration_Staging__c/fields/Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Lecturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lecturer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registration_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>