force-app/main/default/objects/Registration_Staging__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <displayFormat>R-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Registration Number</label>
    <type>AutoNumber</type>
</CustomField>