force-app/main/default/objects/Registration_Staging__c/fields/Tickets__c.field-meta.xml
<CustomField>
    <fullName>Tickets__c</fullName>
    <formula>Booked_Tickets__c -  Cancelled_Tickets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>