force-app/main/default/objects/Registration_Staging__c/fields/Time_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Booking__c</fullName>
    <label>Time of Booking</label>
    <type>DateTime</type>
</CustomField>