force-app/main/default/objects/Registration_Staging__c/fields/Time_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Cancellation__c</fullName>
    <label>Time of Cancellation</label>
    <type>DateTime</type>
</CustomField>