force-app/main/default/objects/Registration_Staging__c/fields/Wants_Upgraded_Cabin__c.field-meta.xml
<CustomField>
    <fullName>Wants_Upgraded_Cabin__c</fullName>
    <label>Wants Upgraded Cabin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>