force-app/main/default/objects/Registration_Staging__c/validationRules/Cancelled_Tickets_Cant_Exceed_Booked.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Tickets_Cant_Exceed_Booked</fullName>
    <active>true</active>
    <errorConditionFormula>Cancelled_Tickets__c &gt; Booked_Tickets__c</errorConditionFormula>
    <errorDisplayField>Cancelled_Tickets__c</errorDisplayField>
    <errorMessage>Cancelled tickets cannot exceed booked tickets.</errorMessage>
</ValidationRule>