force-app/main/default/objects/Registration_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Processing_Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Booked_Tickets__c</columns>
    <columns>Time_of_Booking__c</columns>
    <columns>Lead_Staging__c</columns>
    <columns>External_ID__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>