force-app/main/default/objects/Registration_Staging__c/listViews/Future_Bookings.listView-meta.xml
<ListView>
    <fullName>Future_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Event_Start__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Booked_Tickets__c</columns>
    <columns>Time_of_Booking__c</columns>
    <columns>Lead_Staging__c</columns>
    <columns>External_ID__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Event_in_the_Future__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Future Bookings</label>
</ListView>